# Fast_API_Store

./: crud.py  db.sqlite  main.py  pyproject.toml  test.py  test1.py
alembic/versions/: 2025_03_27_1636-eed27d929147_init_tables.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  post.py  products.py  profile.py  user.py
user/: route.py
users/: crud.py  schemas.py
